[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Pertti.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Level.gd" type="Script" id=2]
[ext_resource path="res://Assets/Textures/rectangle.png" type="Texture" id=4]

[sub_resource type="Shader" id=1]
code = "    shader_type canvas_item;

uniform float amount : hint_range(0,0.5);

vec4 sample_glow_pixel(sampler2D tex, vec2 uv) {
   float hdr_threshold = amount; 
    return max(textureLod(tex, uv, 2.0) - hdr_threshold, vec4(0.0));
}

void fragment() {
    vec2 ps = SCREEN_PIXEL_SIZE;
    // Get blurred color from pixels considered glowing
    vec4 col0 = sample_glow_pixel(SCREEN_TEXTURE, SCREEN_UV + vec2(-ps.x, 0));
    vec4 col1 = sample_glow_pixel(SCREEN_TEXTURE, SCREEN_UV + vec2(ps.x, 0));
    vec4 col2 = sample_glow_pixel(SCREEN_TEXTURE, SCREEN_UV + vec2(0, -ps.y));
    vec4 col3 = sample_glow_pixel(SCREEN_TEXTURE, SCREEN_UV + vec2(0, ps.y));

    vec4 col = texture(SCREEN_TEXTURE, SCREEN_UV);
    vec4 glowing_col = 0.25 * (col0 + col1 + col2 + col3);

    COLOR = vec4(col.rgb + glowing_col.rgb, col.a);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/amount = null

[sub_resource type="NavigationPolygon" id=5]
vertices = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=4]
0/name = "rectangle.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/navigation = SubResource( 5 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 3 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Level" type="Node2D"]
script = ExtResource( 2 )

[node name="Pertti" parent="." instance=ExtResource( 1 )]
position = Vector2( 957.015, 651.371 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="HUD"]
material = SubResource( 2 )
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 4 )
format = 1
tile_data = PoolIntArray( -1310728, 0, 0, -1310727, 0, 0, -1310726, 0, 0, -1310725, 0, 0, -1310724, 0, 0, -1310723, 0, 0, -1310722, 0, 0, -1310721, 0, 0, -1376256, 0, 0, -1376255, 0, 0, -1376254, 0, 0, -1376253, 0, 0, -1376252, 0, 0, -1376251, 0, 0, -1376250, 0, 0, -1376249, 0, 0, -1376248, 0, 0, -1376247, 0, 0, -1376246, 0, 0, -1376245, 0, 0, -1376244, 0, 0, -1376243, 0, 0, -1376242, 0, 0, -1376241, 0, 0, -1376240, 0, 0, -1376239, 0, 0, -1376238, 0, 0, -1376237, 0, 0, -1376236, 0, 0, -1376235, 0, 0, -1376234, 0, 0, -1376233, 0, 0, -1376232, 0, 0, -1376231, 0, 0, -1376230, 0, 0, -1376229, 0, 0, -1376228, 0, 0, -1376227, 0, 0, -1376226, 0, 0, -1376225, 0, 0, -1376224, 0, 0, -1376223, 0, 0, -1376222, 0, 0, -1376221, 0, 0, -1376220, 0, 0, -1376219, 0, 0, -1245192, 0, 0, -1310683, 0, 0, -1179656, 0, 0, -1245147, 0, 0, -1114120, 0, 0, -1179611, 0, 0, -1048584, 0, 0, -1114075, 0, 0, -983048, 0, 0, -1048539, 0, 0, -917512, 0, 0, -983003, 0, 0, -851983, 0, 0, -851982, 0, 0, -851981, 0, 0, -851980, 0, 0, -851979, 0, 0, -851978, 0, 0, -851977, 0, 0, -851976, 0, 0, -917504, 0, 0, -917503, 0, 0, -917502, 0, 0, -917501, 0, 0, -917500, 0, 0, -917499, 0, 0, -917498, 0, 0, -917497, 0, 0, -917496, 0, 0, -917495, 0, 0, -917494, 0, 0, -917493, 0, 0, -917486, 0, 0, -917485, 0, 0, -917484, 0, 0, -917483, 0, 0, -917482, 0, 0, -917481, 0, 0, -917480, 0, 0, -917479, 0, 0, -917478, 0, 0, -917477, 0, 0, -917476, 0, 0, -917475, 0, 0, -917467, 0, 0, -917466, 0, 0, -917465, 0, 0, -917464, 0, 0, -917463, 0, 0, -917462, 0, 0, -917461, 0, 0, -917460, 0, 0, -786447, 0, 0, -851957, 0, 0, -851950, 0, 0, -851924, 0, 0, -720911, 0, 0, -786421, 0, 0, -786414, 0, 0, -786388, 0, 0, -655375, 0, 0, -720885, 0, 0, -720878, 0, 0, -720852, 0, 0, -589839, 0, 0, -655349, 0, 0, -655342, 0, 0, -655316, 0, 0, -524303, 0, 0, -589813, 0, 0, -589806, 0, 0, -589780, 0, 0, -458767, 0, 0, -524277, 0, 0, -524270, 0, 0, -524244, 0, 0, -393231, 0, 0, -458741, 0, 0, -458734, 0, 0, -458708, 0, 0, -327695, 0, 0, -327688, 0, 0, -393216, 0, 0, -393215, 0, 0, -393214, 0, 0, -393213, 0, 0, -393212, 0, 0, -393211, 0, 0, -393210, 0, 0, -393209, 0, 0, -393208, 0, 0, -393207, 0, 0, -393206, 0, 0, -393205, 0, 0, -393198, 0, 0, -393197, 0, 0, -393196, 0, 0, -393195, 0, 0, -393194, 0, 0, -393193, 0, 0, -393192, 0, 0, -393191, 0, 0, -393190, 0, 0, -393189, 0, 0, -393188, 0, 0, -393187, 0, 0, -393179, 0, 0, -393172, 0, 0, -262159, 0, 0, -262152, 0, 0, -327680, 0, 0, -327651, 0, 0, -327643, 0, 0, -327636, 0, 0, -196623, 0, 0, -196616, 0, 0, -262144, 0, 0, -262115, 0, 0, -262107, 0, 0, -262100, 0, 0, -131087, 0, 0, -131080, 0, 0, -196608, 0, 0, -196579, 0, 0, -196571, 0, 0, -196564, 0, 0, -65551, 0, 0, -65544, 0, 0, -131072, 0, 0, -131043, 0, 0, -131035, 0, 0, -131028, 0, 0, -15, 0, 0, -8, 0, 0, -65536, 0, 0, -65507, 0, 0, -65499, 0, 0, -65492, 0, 0, 65521, 0, 0, 65528, 0, 0, 0, 0, 0, 29, 0, 0, 37, 0, 0, 44, 0, 0, 131057, 0, 0, 131064, 0, 0, 65536, 0, 0, 65565, 0, 0, 65573, 0, 0, 65580, 0, 0, 196593, 0, 0, 196600, 0, 0, 131072, 0, 0, 131083, 0, 0, 131090, 0, 0, 131101, 0, 0, 131109, 0, 0, 131116, 0, 0, 262129, 0, 0, 262136, 0, 0, 196608, 0, 0, 196619, 0, 0, 196626, 0, 0, 196637, 0, 0, 196645, 0, 0, 196652, 0, 0, 327665, 0, 0, 327672, 0, 0, 262144, 0, 0, 262155, 0, 0, 262162, 0, 0, 262173, 0, 0, 262181, 0, 0, 262188, 0, 0, 393201, 0, 0, 393208, 0, 0, 327680, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327709, 0, 0, 327710, 0, 0, 327711, 0, 0, 327712, 0, 0, 327713, 0, 0, 327714, 0, 0, 327715, 0, 0, 327716, 0, 0, 327717, 0, 0, 327724, 0, 0, 458737, 0, 0, 458744, 0, 0, 458745, 0, 0, 458746, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393260, 0, 0, 524273, 0, 0, 458796, 0, 0, 589809, 0, 0, 524332, 0, 0, 655345, 0, 0, 589868, 0, 0, 720881, 0, 0, 655404, 0, 0, 786417, 0, 0, 720940, 0, 0, 851953, 0, 0, 786476, 0, 0, 917489, 0, 0, 917496, 0, 0, 917497, 0, 0, 917498, 0, 0, 917499, 0, 0, 917500, 0, 0, 917501, 0, 0, 917502, 0, 0, 917503, 0, 0, 851968, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851997, 0, 0, 851998, 0, 0, 851999, 0, 0, 852000, 0, 0, 852001, 0, 0, 852002, 0, 0, 852003, 0, 0, 852004, 0, 0, 852005, 0, 0, 852012, 0, 0, 983025, 0, 0, 983032, 0, 0, 917504, 0, 0, 917515, 0, 0, 917522, 0, 0, 917533, 0, 0, 917541, 0, 0, 917548, 0, 0, 1048561, 0, 0, 1048568, 0, 0, 983040, 0, 0, 983051, 0, 0, 983058, 0, 0, 983069, 0, 0, 983077, 0, 0, 983084, 0, 0, 1114097, 0, 0, 1114104, 0, 0, 1048576, 0, 0, 1048587, 0, 0, 1048594, 0, 0, 1048605, 0, 0, 1048613, 0, 0, 1048620, 0, 0, 1179633, 0, 0, 1179640, 0, 0, 1114112, 0, 0, 1114141, 0, 0, 1114149, 0, 0, 1114156, 0, 0, 1245169, 0, 0, 1245176, 0, 0, 1179648, 0, 0, 1179677, 0, 0, 1179685, 0, 0, 1179692, 0, 0, 1310705, 0, 0, 1310712, 0, 0, 1245184, 0, 0, 1245213, 0, 0, 1245221, 0, 0, 1245228, 0, 0, 1376241, 0, 0, 1376248, 0, 0, 1310720, 0, 0, 1310749, 0, 0, 1310757, 0, 0, 1310764, 0, 0, 1441777, 0, 0, 1441784, 0, 0, 1376256, 0, 0, 1376285, 0, 0, 1376293, 0, 0, 1376300, 0, 0, 1507313, 0, 0, 1507320, 0, 0, 1441792, 0, 0, 1441821, 0, 0, 1441829, 0, 0, 1441836, 0, 0, 1572849, 0, 0, 1572856, 0, 0, 1507328, 0, 0, 1507357, 0, 0, 1507365, 0, 0, 1507372, 0, 0, 1638385, 0, 0, 1638392, 0, 0, 1572864, 0, 0, 1572865, 0, 0, 1572866, 0, 0, 1572867, 0, 0, 1572868, 0, 0, 1572869, 0, 0, 1572870, 0, 0, 1572871, 0, 0, 1572872, 0, 0, 1572873, 0, 0, 1572874, 0, 0, 1572875, 0, 0, 1572882, 0, 0, 1572883, 0, 0, 1572884, 0, 0, 1572885, 0, 0, 1572886, 0, 0, 1572887, 0, 0, 1572888, 0, 0, 1572889, 0, 0, 1572890, 0, 0, 1572891, 0, 0, 1572892, 0, 0, 1572893, 0, 0, 1572901, 0, 0, 1572908, 0, 0, 1703921, 0, 0, 1638411, 0, 0, 1638418, 0, 0, 1638444, 0, 0, 1769457, 0, 0, 1703947, 0, 0, 1703954, 0, 0, 1703980, 0, 0, 1834993, 0, 0, 1769483, 0, 0, 1769490, 0, 0, 1769516, 0, 0, 1900529, 0, 0, 1835019, 0, 0, 1835026, 0, 0, 1835052, 0, 0, 1966065, 0, 0, 1900555, 0, 0, 1900562, 0, 0, 1900588, 0, 0, 2031601, 0, 0, 1966091, 0, 0, 1966098, 0, 0, 1966124, 0, 0, 2097137, 0, 0, 2031627, 0, 0, 2031634, 0, 0, 2031660, 0, 0, 2162673, 0, 0, 2162674, 0, 0, 2162675, 0, 0, 2162676, 0, 0, 2162677, 0, 0, 2162678, 0, 0, 2162679, 0, 0, 2162680, 0, 0, 2097152, 0, 0, 2097153, 0, 0, 2097154, 0, 0, 2097155, 0, 0, 2097156, 0, 0, 2097157, 0, 0, 2097158, 0, 0, 2097159, 0, 0, 2097160, 0, 0, 2097161, 0, 0, 2097162, 0, 0, 2097163, 0, 0, 2097170, 0, 0, 2097171, 0, 0, 2097172, 0, 0, 2097173, 0, 0, 2097174, 0, 0, 2097175, 0, 0, 2097176, 0, 0, 2097177, 0, 0, 2097178, 0, 0, 2097179, 0, 0, 2097180, 0, 0, 2097181, 0, 0, 2097189, 0, 0, 2097190, 0, 0, 2097191, 0, 0, 2097192, 0, 0, 2097193, 0, 0, 2097194, 0, 0, 2097195, 0, 0, 2097196, 0, 0, 2228216, 0, 0, 2162725, 0, 0, 2293752, 0, 0, 2228261, 0, 0, 2359288, 0, 0, 2293797, 0, 0, 2424824, 0, 0, 2359333, 0, 0, 2490360, 0, 0, 2424869, 0, 0, 2555896, 0, 0, 2490405, 0, 0, 2621432, 0, 0, 2621433, 0, 0, 2621434, 0, 0, 2621435, 0, 0, 2621436, 0, 0, 2621437, 0, 0, 2621438, 0, 0, 2621439, 0, 0, 2555904, 0, 0, 2555905, 0, 0, 2555906, 0, 0, 2555907, 0, 0, 2555908, 0, 0, 2555909, 0, 0, 2555910, 0, 0, 2555911, 0, 0, 2555912, 0, 0, 2555913, 0, 0, 2555914, 0, 0, 2555915, 0, 0, 2555916, 0, 0, 2555917, 0, 0, 2555918, 0, 0, 2555919, 0, 0, 2555920, 0, 0, 2555921, 0, 0, 2555922, 0, 0, 2555923, 0, 0, 2555924, 0, 0, 2555925, 0, 0, 2555926, 0, 0, 2555927, 0, 0, 2555928, 0, 0, 2555929, 0, 0, 2555930, 0, 0, 2555931, 0, 0, 2555932, 0, 0, 2555933, 0, 0, 2555934, 0, 0, 2555935, 0, 0, 2555936, 0, 0, 2555937, 0, 0, 2555938, 0, 0, 2555939, 0, 0, 2555940, 0, 0, 2555941, 0, 0 )

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="SpawnPoint1" type="Node2D" parent="SpawnPoints"]
position = Vector2( 1441.83, 1824.36 )

[node name="SpawnPoint2" type="Node2D" parent="SpawnPoints"]
position = Vector2( 554.175, 1785.13 )

[node name="SpawnPoint3" type="Node2D" parent="SpawnPoints"]
position = Vector2( -240.306, 1093.64 )

[node name="SpawnPoint4" type="Node2D" parent="SpawnPoints"]
position = Vector2( 2157.85, 112.797 )

[node name="SpawnPoint5" type="Node2D" parent="SpawnPoints"]
position = Vector2( 1422.22, -613.025 )

[node name="SpawnPoint6" type="Node2D" parent="SpawnPoints"]
position = Vector2( 450, -610 )

[node name="SpawnPoint7" type="Node2D" parent="SpawnPoints"]
position = Vector2( -215, 200 )

[node name="SpawnPoint8" type="Node2D" parent="SpawnPoints"]
position = Vector2( 2143.92, 1077.85 )
